Added semantic entailment algorithm template...